clang/test/BSC/Negative/SafeZone/trait_member_function/trait_member_function.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  _Unsafe int foo(This* this);
  _Unsafe int goo(This* this);
  _Unsafe int* owned hoo(This* owned this);
};

trait G {
  _Safe int* owned ioo(This* owned this);
  _Safe int* owned joo(This* owned this);
  _Safe int* owned koo(This* owned this);
};

_Unsafe int int::foo(int* this) { 
  return 1;
}

int int::goo(int* this) {   // OK
  return 1;
}

_Safe int* owned int::hoo(int* owned this) {   // OK
  return this;
}

_Safe int* owned int::ioo(int* owned this) {  // OK
  return this;
}

_Unsafe int* owned int::joo(int* owned this) {
  return this;
}

int* owned int::koo(int* owned this) {
  return this;
}

impl trait F for int; 

impl trait G for int; // expected-error {{conversion from type 'int *owned (*)(void *owned)' to '_Safe int *owned (*)(void *owned)' is forbidden}}
                      // expected-error@-1 {{conversion from type 'int *owned (*)(void *owned)' to '_Safe int *owned (*)(void *owned)' is forbidden}}
int main() {
  int a = 1;
  int *p = &a;
  trait F* f = p;
  _Safe {
    f->goo();    // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
                    // expected-error@-1 {{unsafe function call is forbidden in the safe zone}}
    int::foo(p); // expected-error {{unsafe function call is forbidden in the safe zone}}
  }
  return 0;
}